--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,166 +1,27 @@
 <!DOCTYPE html>
-<html>
-  <head>
-  	<title>Snake Game</title>
-  </head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
 
-  <body>
+  <% if (id < 3){ %>
+    <form action="/" method="post">
+      <input type="submit" value="player<%= id %>" name="id" id="submit-button"/>
+    </form>
+  <% } else{%>
+    <div>
+      Player Capped
+    </div>
+  <% }%>
 
-    <div id="steps">0</div>
-    <canvas id="snakeboard" width="400" height="400"></canvas>
+</body>
 
-    <style>
-      #snakeboard {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-      }
-      #steps {
-        font-size: 28px;
-      }
-    </style>
-  </body>
+<script>
 
-  <script>
-    const board_border = 'black';
-    const board_background = "white";
-    const snake_col = 'lightblue';
-    const snake_border = 'darkblue';
-    
-    // set game variables
-    let steps = 0;
-    let celing_step = 5;
-    let increase_step = 5;
+</script>
 
-    // snake variables
-    let snake = [
-      {x: 200, y: 200},
-      {x: 190, y: 200},
-      {x: 180, y: 200},
-      {x: 170, y: 200},
-      {x: 160, y: 200}
-    ]
-
-    let changing_direction = false; // True if changing direction
-    let food_x, food_y;
-    let dx = 10, dy = 0; // Horizontal/Vertical velocity
-    
-    const snakeboard = document.getElementById("snakeboard"); // Get the canvas element
-    const snakeboard_ctx = snakeboard.getContext("2d"); // Return a two dimensional drawing context
-
-    main(); // Start game
-
-    document.addEventListener("keydown", change_direction);
-    
-    // main function called repeatedly to keep the game running
-    function main() {
-
-        if (has_game_ended()) return;
-
-        changing_direction = false;
-        setTimeout(function onTick() {
-        clear_board();
-        move_snake();
-        drawSnake();
-        // Repeat
-        main();
-      }, 100)
-    }
-    
-    // draw a border around the canvas
-    function clear_board() {
-      //  Select the colour to fill the drawing
-      snakeboard_ctx.fillStyle = board_background;
-      //  Select the colour for the border of the canvas
-      snakeboard_ctx.strokestyle = board_border;
-      // Draw a "filled" rectangle to cover the entire canvas
-      snakeboard_ctx.fillRect(0, 0, snakeboard.width, snakeboard.height);
-      // Draw a "border" around the entire canvas
-      snakeboard_ctx.strokeRect(0, 0, snakeboard.width, snakeboard.height);
-    }
-    
-    // Draw the snake on the canvas
-    function drawSnake() {
-      // Draw each part
-      snake.forEach(drawSnakePart)
-    }
-
-    // Draw one snake part
-    function drawSnakePart(snakePart) {
-
-      // Set the colour of the snake part
-      snakeboard_ctx.fillStyle = snake_col;
-      // Set the border colour of the snake part
-      snakeboard_ctx.strokestyle = snake_border;
-      // Draw a "filled" rectangle to represent the snake part at the coordinates
-      // the part is located
-      snakeboard_ctx.fillRect(snakePart.x, snakePart.y, 10, 10);
-      // Draw a border around the snake part
-      snakeboard_ctx.strokeRect(snakePart.x, snakePart.y, 10, 10);
-    }
-    
-    function has_game_ended() {
-      for (let i = 4; i < snake.length; i++) {
-        if (snake[i].x === snake[0].x && snake[i].y === snake[0].y) return true
-      }
-      const hitLeftWall = snake[0].x < 0;
-      const hitRightWall = snake[0].x > snakeboard.width - 10;
-      const hitToptWall = snake[0].y < 0;
-      const hitBottomWall = snake[0].y > snakeboard.height - 10;
-      return hitLeftWall || hitRightWall || hitToptWall || hitBottomWall
-    }
-
-    function change_direction(event) {
-      const LEFT_KEY = 37;
-      const RIGHT_KEY = 39;
-      const UP_KEY = 38;
-      const DOWN_KEY = 40;
-      
-    // Prevent the snake from reversing
-    
-      if (changing_direction) return;
-      changing_direction = true;
-      const keyPressed = event.keyCode;
-      const goingUp = dy === -10;
-      const goingDown = dy === 10;
-      const goingRight = dx === 10;
-      const goingLeft = dx === -10;
-      if (keyPressed === LEFT_KEY && !goingRight) {
-        dx = -10;
-        dy = 0;
-      }
-      if (keyPressed === UP_KEY && !goingDown) {
-        dx = 0;
-        dy = -10;
-      }
-      if (keyPressed === RIGHT_KEY && !goingLeft) {
-        dx = 10;
-        dy = 0;
-      }
-      if (keyPressed === DOWN_KEY && !goingUp) {
-        dx = 0;
-        dy = 10;
-      }
-    }
-
-    function move_snake() {
-      // Create the new Snake's head
-      const head = {x: snake[0].x + dx, y: snake[0].y + dy};
-      // Add the new head to the beginning of snake body
-      snake.unshift(head);
-      const has_eaten_food = snake[0].x === food_x && snake[0].y === food_y;
-      if (steps > celing_step) {
-        // increment celing
-        celing_step += increase_step;
-      } else {
-        // Remove the last part of snake body
-        snake.pop();
-      }
-      
-      steps += 1;
-      document.getElementById('steps').innerHTML = steps;
-    }
-    
-  </script>
 </html>
