Made size of button larger

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
 
   <% if (id < 3){ %>
     <form action="/" method="post">
-      <input type="submit" value="player<%= id %>" name="id" id="submit-button"/>
+      <input type="submit" value="player<%= id %>" name="id" id="submit-button" style="height:100px; width:200px"/>
     </form>
   <% } else{%>
     <div>
